test/modules/diten/usemodule/test_nested_use2.good
test_nested_use2.chpl:12: error: Cannot find module 'notinnermost'
